--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "animate.css": "^4.1.1",
     "firebase": "^9.9.4",
     "minimatch": "^5.1.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.39",
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
